--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </title>
     <link rel="icon" type="imagen/x-icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
-
+    <script src="cv.js/cv.js"></script>
     
 </head>
 <body>
@@ -89,7 +89,11 @@ Nivel de idioma Inglés medio
 
 <div7 id="div_perfil">
   <h1>PERFIL</h1>
-  
+  <button type="button" id="perfil" onclick="myFunction()">Click Botón</button>
+<p id="demo1"></p>
+<p id="demo2"></p>
+<p id="demo3"></p>
+<p id="demo4"></p>
 </div7>
 
 </body>
