Acomodando texto boton

--- a/index.html
+++ b/index.html
@@ -89,12 +89,15 @@ Nivel de idioma Inglés medio
 
 <div7 id="div_perfil">
   <h1>PERFIL</h1>
-  <button type="button" id="perfil" onclick="myFunction()">Click Botón</button>
-<p id="demo1"></p>
-<p id="demo2"></p>
-<p id="demo3"></p>
-<p id="demo4"></p>
+
 </div7>
 
+<div8>
+  <button type="button" id="div_perfil2" onclick="myFunction()">Click Botón</button>
+  <h1 id="demo1"></h1>
+  <h2 id="demo2"></h2>
+  <h3 id="demo3"></h3>
+  <h4 id="demo4"></h4>
+</div8>
 </body>
 </html>
