--- a/index.html
+++ b/index.html
@@ -92,12 +92,18 @@ Nivel de idioma Inglés medio
 
 </div7>
 
-<div8>
-  <button type="button" id="div_perfil2" onclick="myFunction()">Click Botón</button>
-  <h1 id="demo1"></h1>
-  <h2 id="demo2"></h2>
-  <h3 id="demo3"></h3>
-  <h4 id="demo4"></h4>
-</div8>
+<div10 id="div_boton">
+  <button type="button" id="button" onclick="myFunction()">CLICK AQUÍ </button>
+  <p id="demo1">
+  </p>
+  <p2 id="demo2">
+  </p2>
+  <p3 id="demo3"> 
+  </p3>
+  <p4 id="demo4">
+  </p4>
+
+</div10>
+
 </body>
 </html>
